--- a/class22.qmd
+++ b/class22.qmd
@@ -15,7 +15,7 @@ format:
 ## Today's Agenda
 
 - What I Taught for Many Years
-- p-Hacking
+- What is the problem?
 - Do Confidence Intervals Solve the Problem?
 - Borrowing from Bayesian Ideas
 - Replicable Research and the Crisis in Science
@@ -43,30 +43,6 @@ Version `r Sys.time()`
 3. For *p* values near $\alpha$, include only enough decimal places to clarify the reject/retain decision. 
 4. For very small *p* values, always report either *p* < 0.0001 or even just *p* < 0.001, rather than specifying the result in scientific notation, or, worse, as $p = 0$ which is glaringly inappropriate.
 5. Report *p* values above 0.99 as *p* > 0.99, rather than *p* = 1.
-
-# American Statistical Association to the rescue!?!
-
-## ASA Statement on *p* Values {.smaller}
-
-ASA Statement: "Informally, a p-value is the probability under a specified statistical model that a statistical summary of the data (e.g., the sample mean difference between two compared groups) would be equal to or more extreme than its observed value."
-
-"[Not Even Scientists Can Easily Explain *p* Values](http://fivethirtyeight.com/features/not-even-scientists-can-easily-explain-p-values/)" at fivethirtyeight.com
-
-... Try to distill the p-value down to an intuitive concept and it loses all its nuances and complexity, said science journalist Regina Nuzzo, a statistics professor at Gallaudet University. "Then people get it wrong, and this is why statisticians are upset and scientists are confused." **You can get it right, or you can make it intuitive, but it's all but impossible to do both.**
-
-"[Statisticians found one thing they can agree on](http://fivethirtyeight.com/features/statisticians-found-one-thing-they-can-agree-on-its-time-to-stop-misusing-p-values/)" at fivethirtyeight.com
-
-## A Few Comments on Significance {.smaller}
-
-- **A significant effect is not necessarily the same thing as an interesting effect.**  For example, results calculated from large samples are nearly always "significant" even when the effects are quite small in magnitude.  Before doing a test, always ask if the effect is large enough to be of any practical interest.  If not, why do the test?
-
-- **A non-significant effect is not necessarily the same thing as no difference.**  A large effect of real practical interest may still produce a non-significant result simply because the sample is too small.
-
-- **There are assumptions behind all statistical inferences.** Checking assumptions is crucial to validating the inference made by any test or confidence interval.
-
-- "**Scientific conclusions and business or policy decisions should not be based only on whether a p-value passes a specific threshold.**"
-
-[ASA 2016 statement](http://amstat.tandfonline.com/doi/pdf/10.1080/00031305.2016.1154108) on *p* values
 
 ## From George Cobb - on why *p* values deserve to be re-evaluated {.smaller}
 
@@ -122,6 +98,150 @@ Bottom line:  **Reject rules.  Ideas matter.**
 
 ![](c22/figures/bear.png)
 
+# American Statistical Association to the rescue!?!
+
+## The American Statistical Association
+
+2016
+
+- Ronald L. Wasserstein & Nicole A. Lazar (2016) [The ASA's Statement on p-Values: Context, Process, and Purpose](https://www.tandfonline.com/doi/full/10.1080/00031305.2016.1154108), *The American Statistician*, 70:2, 129-133, DOI: [10.1080/00031305.2016.1154108](https://doi.org/10.1080/00031305.2016.1154108)
+
+
+2019
+
+- Ronald L. Wasserstein, Allen L. Schirm & Nicole A. Lazar (2019) [Moving to a World Beyond "p < 0.05"](https://www.tandfonline.com/doi/full/10.1080/00031305.2019.1583913), *The American Statistician*, 73:sup1, 1-19, DOI: [10.1080/00031305.2019.1583913](https://doi.org/10.1080/00031305.2019.1583913). 
+
+## Statistical Inference in the 21st Century
+
+> ... a world learning to venture beyond "p < 0.05"
+
+> This is a world where researchers are free to treat "p = 0.051" and "p = 0.049" as not being categorically different, where authors no longer find themselves constrained to selectively publish their results based on a single magic number. 
+
+## Statistical Inference in the 21st Century
+
+> In this world, where studies with "p < 0.05" and studies with "p > 0.05" are not automatically in conflict, researchers will see their results more easily replicated -- and, even when not, they will better understand why.
+
+> The 2016 ASA Statement on P-Values and Statistical Significance started moving us toward this world. As of the date of publication of this special issue, the statement has been viewed over 294,000 times and cited over 1700 times-an average of about 11 citations per week since its release. Now we must go further.
+
+## The American Statistical Association Statement on P values and Statistical Significance
+
+The ASA Statement (2016) was mostly about what **not** to do.
+
+The 2019 effort represents an attempt to explain what to do.
+
+## ASA 2019 Statement
+
+> Some of you exploring this special issue of The American Statistician might be wondering if it's a scolding from pedantic statisticians lecturing you about what not to dowith p-values, without
+offering any real ideas of what to do about the very hard problem of separating signal from noise in data and making decisions under uncertainty. Fear not. In this issue, thanks to 43 innovative
+and thought-provoking papers from forward-looking statisticians, help is on the way.
+
+## "Don't" is not enough. 
+
+> If you're just arriving to the debate, here's a sampling of what not to do.
+
+- Don't base your conclusions solely on whether an association or effect was found to be "statistically significant" (i.e., the *p* value passed some arbitrary threshold such as p < 0.05).
+- Don't believe that an association or effect exists just because it was statistically significant.
+
+## "Don't" is not enough. 
+
+- Don't believe that an association or effect is absent just because it was not statistically significant.
+- Don't believe that your p-value gives the probability that chance alone produced the observed association or effect or the probability that your test hypothesis is true.
+- Don't conclude anything about scientific or practical importance based on statistical significance (or lack thereof).
+
+
+
+## Problems with *p* Values
+
+1. *P* values are inherently unstable
+2. The *p* value, or statistical significance, does not measure the size of an effect or the importance of a result
+3. Scientific conclusions should not be based only on whether a *p* value passes a specific threshold
+4. Proper inference requires full reporting and transparency
+5. By itself, a *p* value does not provide a good measure of evidence regarding a model or hypothesis
+
+<http://jamanetwork.com/journals/jamaotolaryngology/fullarticle/2546529>
+
+## One More Don't...
+
+![](c22/figures/ASA2019_1.png)
+
+> A label of statistical significance adds nothing to what is already conveyed by the value of *p*; in fact, this dichotomization of *p*-values makes matters worse.
+
+## Gelman on *p* values, 1
+
+> The common practice of dividing data comparisons into categories based on significance levels is terrible, but it happens all the time.... so it's worth examining the prevalence of this error. Consider, for example, this division: 
+
+- "really significant" for *p* < .01, 
+- "significant" for *p* < .05, 
+- "marginally significant" for *p* < .1, and 
+- "not at all significant" otherwise. 
+
+## Gelman on *p* values, 2
+
+Now consider some typical *p*-values in these ranges: say, *p* = .005, *p* = .03, *p* = .08, and *p* = .2. 
+
+Translate these two-sided *p*-values back into z-scores...
+
+Description | really sig. | sig. | marginally sig.| not at all sig.
+---------: | ----: | ----: | ----: | ----:
+*p* value | 0.005 | 0.03 | 0.08 | 0.20
+Z score | 2.8 | 2.2 | 1.8 | 1.3
+
+## Gelman on *p* values, 3
+
+The seemingly yawning gap in p-values comparing the not at all significant *p*-value of .2 to the really significant *p*-value of .005, is only a z score of 1.5. 
+
+If you had two independent experiments with z-scores of 2.8 and 1.3 and with equal standard errors and you wanted to compare them, you'd get a difference of 1.5 with a standard error of 1.4, which is completely consistent with noise.
+
+## Gelman on *p* values, 4
+
+From a **statistical** point of view, the trouble with using the p-value as a data summary is that the p-value can only be interpreted in the context of the null hypothesis of zero effect, and (much of the time), nobody's interested in the null hypothesis. 
+
+Indeed, once you see comparisons between large, marginal, and small effects, the null hypothesis is irrelevant, as you want to be comparing effect sizes.
+
+## Gelman on *p* values, 5
+
+From a **psychological** point of view, the trouble with using the p-value as a data summary is that this is a kind of deterministic thinking, an attempt to convert real uncertainty into firm statements that are just not possible (or, as we would say now, just not replicable).
+
+**The key point**: The difference between statistically significant and NOT statistically significant is not, generally, statistically significant.
+
+<http://andrewgelman.com/2016/10/15/marginally-significant-effects-as-evidence-for-hypotheses-changing-attitudes-over-four-decades/>
+
+## Regina Nuzzo: *Nature* Statistical Errors
+
+![](c22/figures/Probable_Cause.jpg)
+
+## Are P values all that bad?
+
+![](c22/figures/dude.PNG)
+
+
+---
+
+![](c22/figures/dude2.PNG)
+
+## ASA Statement on *p* Values {.smaller}
+
+ASA Statement: "Informally, a p-value is the probability under a specified statistical model that a statistical summary of the data (e.g., the sample mean difference between two compared groups) would be equal to or more extreme than its observed value."
+
+"[Not Even Scientists Can Easily Explain *p* Values](http://fivethirtyeight.com/features/not-even-scientists-can-easily-explain-p-values/)" at fivethirtyeight.com
+
+... Try to distill the p-value down to an intuitive concept and it loses all its nuances and complexity, said science journalist Regina Nuzzo, a statistics professor at Gallaudet University. "Then people get it wrong, and this is why statisticians are upset and scientists are confused." **You can get it right, or you can make it intuitive, but it's all but impossible to do both.**
+
+"[Statisticians found one thing they can agree on](http://fivethirtyeight.com/features/statisticians-found-one-thing-they-can-agree-on-its-time-to-stop-misusing-p-values/)" at fivethirtyeight.com
+
+## A Few Comments on Significance {.smaller}
+
+- **A significant effect is not necessarily the same thing as an interesting effect.**  For example, results calculated from large samples are nearly always "significant" even when the effects are quite small in magnitude.  Before doing a test, always ask if the effect is large enough to be of any practical interest.  If not, why do the test?
+
+- **A non-significant effect is not necessarily the same thing as no difference.**  A large effect of real practical interest may still produce a non-significant result simply because the sample is too small.
+
+- **There are assumptions behind all statistical inferences.** Checking assumptions is crucial to validating the inference made by any test or confidence interval.
+
+- "**Scientific conclusions and business or policy decisions should not be based only on whether a p-value passes a specific threshold.**"
+
+[ASA 2016 statement](http://amstat.tandfonline.com/doi/pdf/10.1080/00031305.2016.1154108) on *p* values
+
+
 ## p = 0.05? {.smaller}
 
 > "For decades, the conventional p-value threshold has been 0.05," says Dr. Paul Wakim, chief of the biostatistics and clinical epidemiology service at the National Institutes of Health Clinical Center, "but it is extremely important to understand that this 0.05, there's nothing rigorous about it. It wasn't derived from statisticians who got together, calculated the best threshold, and then found that it is 0.05. No, it's Ronald Fisher, who basically said, 'Let's use 0.05,' and he admitted that it was arbitrary."
@@ -134,25 +254,9 @@ Bottom line:  **Reject rules.  Ideas matter.**
 
 - NOVA Season 45 Episode 6 [\textcolor{blue}{Prediction by the Numbers}](http://www.pbs.org/video/prediction-by-the-numbers-hg2znc/) 2018-02-28.
 
-
-
-
 ## p values don't trend...
 
 ![](c22/figures/pvalues_trend.png)
-
-
-## George Cobb's Questions (with Answers)
-
-In February 2014, George Cobb, Professor Emeritus of Mathematics and Statistics at Mount Holyoke College, posed these questions to an ASA discussion forum:
-
-Q: Why do so many colleges and grad schools teach *p* = 0.05?
-
-A: Because that's **still** what the scientific community and journal editors use.
-
-Q: Why do so many people still use *p* = 0.05?
-
-A: Because that's what they were taught in college or grad school.
 
 ## All the p values {.smaller}
 
@@ -201,11 +305,18 @@ knitr::include_graphics("c22/figures/babyak1.png")
 knitr::include_graphics("c22/figures/rothman1.png")
 ```
 
-# p-Hacking
+## George Cobb's Questions (with Answers)
 
-## Hack Your Way To Scientific Glory (538)
+In February 2014, George Cobb, Professor Emeritus of Mathematics and Statistics at Mount Holyoke College, posed these questions to an ASA discussion forum:
 
-![](c22/figures/hacking.png)
+Q: Why do so many colleges and grad schools teach *p* = 0.05?
+
+A: Because that's **still** what the scientific community and journal editors use.
+
+Q: Why do so many people still use *p* = 0.05?
+
+A: Because that's what they were taught in college or grad school.
+
 
 ## "Researcher Degrees of Freedom", 1 {.smaller}
 
@@ -238,71 +349,6 @@ details of data selection and analysis were not pre-specified and, as a result, 
 data.
 
 - [Gelman and Loken](http://www.stat.columbia.edu/~gelman/research/unpublished/p_hacking.pdf)
-
-## Grim Reality
-
-- Editorial, Educational and Other Institutional Practices Will Have to Change
-- It Is Going to Take Work, and It Is Going to Take Time
-- Why Will Change Finally Happen Now?
-
-## Confidence Intervals - do they solve our problem?
-
-![](c22/figures/confint1.png)
-
-## Confidence Intervals - do they solve our problem?
-
-![](c22/figures/confint2.png)
-
-## Confidence Intervals - do they solve our problem?
-
-![](c22/figures/confint3.png)
-
-
-## Confidence Intervals - do they solve our problem?
-
-![](c22/figures/confint4.png)
-
-
-## Confidence Intervals - do they solve our problem?
-
-![](c22/figures/confint5.png)
-
-## Using Bayesian Ideas: Confidence Intervals {.smaller}
-
-> My current favorite (hypothetical) example is an epidemiology study of some small effect where the point estimate of the odds ratio is 3.0 with a 95% conf interval of [1.1, 8.2]. 
-
-> As a 95% conf interval, this is fine (assuming the underlying assumptions regarding sampling, causal identification, etc. are valid). 
-
-(but on some level you need to deal with the fact that...)
-
-> ... real-world odds ratios are much more likely to be near 1.1 than to be near 8.2. 
-
-See [Gelman 2014-12-11](http://andrewgelman.com/2014/12/11/fallacy-placing-confidence-confidence-intervals/)
-
-## Uncertainty intervals? {.smaller}
-
-I've (Gelman) become increasingly uncomfortable with the term "confidence interval" for several reasons:
-
-- The well-known difficulties in interpretation (officially the confidence statement can be interpreted only on average, but people typically implicitly give the Bayesian interpretation to each case.)
-- The ambiguity between confidence intervals and predictive intervals.
-- The awkwardness of explaining that confidence intervals are big in noisy situations where you have less confidence, and confidence intervals are small when you have more confidence.
-
-> So here's my proposal. Let's use the term "uncertainty interval" instead. The uncertainty interval tells you how much uncertainty you have. 
-
-See [Gelman 2010-12-21](http://andrewgelman.com/2010/12/21/lets_say_uncert/)
-
-# Some Noisy Recent Suggestions
-
-## Benjamin et al 2017 Redefine Statistical Significance {.smaller}
-
-We propose to change the default P-value threshold for statistical significance for claims of new discoveries from 0.05 to 0.005.
-
-Motivations:
-
-- links to Bayes Factor interpretation
-- 0.005 is stringent enough to "break" the current system - makes it very difficult for researchers to reach threshold with noisy, useless studies.
-
-Visit the [main article](https://psyarxiv.com/mky9j/). Visit an explanatory piece in [Science](http://www.sciencemag.org/news/2017/07/it-will-be-much-harder-call-new-findings-significant-if-team-gets-its-way).
 
 ## Lakens et al. Justify Your Alpha {.smaller}
 
